--- a/.github/workflows/master_securityfunctionsicaro.yml
+++ b/.github/workflows/master_securityfunctionsicaro.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Running Horusec Security
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -p="./" -e="true"
+        horusec start -p="./" -e="true" --information-severity="true"
 
   build-and-deploy:
     runs-on: windows-latest
